--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -10,6 +10,11 @@
   <link rel="preload" as="image" href="../../img/home2.svg">
   <link rel="preload" as="image" href="../../img/info.svg">
   <link rel="preload" as="image" href="../../img/info2.svg">
+  <style>
+    img[src$=".svg"] {
+      width: 16px;
+    }
+  </style>
 </head>
 
 <body>
@@ -28,30 +33,34 @@
   </div>
 
   <!-------------------------------------------->
-  <div class="main">
-
-    <table id="myTable" class="tabela">
-      <thead>
-        <tr class="indexhead">
-          <th class="indexcolname"><a href="https://ftp.insert.com.pl/?C=N;O=D">Name</a></th>
-          <th class="indexcollastmod"><a href="https://ftp.insert.com.pl/?C=M;O=A">Last modified</a></th>
-          <th class="indexcolsize"><a href="https://ftp.insert.com.pl/?C=S;O=A">Size</a></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="">
-          <td class="indexcolname">
-            <div class="img-wrap"><img src="../../img/file-directory.svg" alt="[DIR]"
-                width="16" height="16"></div><a href="../../pliki/5G/">5G</a>
-          </td>
-          <td class="indexcollastmod"></td>
-          <td class="indexcolsize"></td>
-        </tr>
-      </tbody>
-    </table>
-
-  </div>
-  <script src="../../script/main.js"></script>
+  <table id="indexlist">
+    <tr class="indexhead">
+      <th class="indexcolicon">&nbsp;</th>
+      <th class="indexcolname"><a href="?C=N;O=D">Name</a></th>
+      <th class="indexcollastmod"><a href="?C=M;O=A">Last modified</a></th>
+      <th class="indexcolsize"><a href="?C=S;O=A">Size</a></th>
+      <th class="indexcoldesc"><a href="?C=D;O=A">Description</a></th>
+    </tr>
+    <tr class="indexbreakrow">
+      <th colspan="5">
+        <hr />
+      </th>
+    </tr>
+    <tr class="even">
+      <td class="indexcolicon"><img src="/fancy-index/icons/file-directory.svg" alt="[DIR]" width="16" height="16" />
+      </td>
+      <td class="indexcolname"><a href="pub/">pub/</a></td>
+      <td class="indexcollastmod">2007-05-15 10:24 </td>
+      <td class="indexcolsize"> - </td>
+      <td class="indexcoldesc">&nbsp;</td>
+    </tr>
+    <tr class="indexbreakrow">
+      <th colspan="5">
+        <hr />
+      </th>
+    </tr>
+  </table>
+  <script src="/fancy-index/script.js?v=1"></script>
 </body>
 
 </html>
