--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="header">
+    <div id="header">
         <a href="/" title="Przejdź do strony szkoły"><img src="img/home.svg" alt="Home" id="home"></a>
         <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
             title="Przejdź do planu lekcji nauczyciela" target="_blank">
