--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="header">
+  <div id="header">
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
       title="Przejdź do planu lekcji nauczyciela" target="_blank">
