--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <div class="header">
+  <div id="header">
     <a href="../klasa5.html" title="Przejdź do strony głównej"><img src="../../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
       title="Przejdź do planu lekcji nauczyciela" target="_blank">
@@ -47,20 +47,21 @@
       </th>
     </tr>
     <tr class="even">
-      <td class="indexcolicon"><img src="/fancy-index/icons/file-directory.svg" alt="[DIR]" width="16" height="16" />
+      <td class="indexcolicon">
+        <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
       </td>
-      <td class="indexcolname"><a href="pub/">pub/</a></td>
+      <td class="indexcolname"><a href="../../pliki/5G/">5G/</a></td>
       <td class="indexcollastmod">2007-05-15 10:24 </td>
       <td class="indexcolsize"> - </td>
       <td class="indexcoldesc">&nbsp;</td>
     </tr>
     <tr class="indexbreakrow">
       <th colspan="5">
-        <hr />
+        <hr/>
       </th>
     </tr>
   </table>
-  <script src="/fancy-index/script.js?v=1"></script>
+  <script src="../../script/main.js"></script>
 </body>
 
 </html>
