--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -13,7 +13,20 @@
 </head>
 
 <body>
+  <div id="header">
+    <a href="../../index.html" title="Przejdź do strony głównej"><img src="../../img/home.svg" alt="Home" id="home"></a>
+    <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
+      title="Przejdź do planu lekcji nauczyciela" target="_blank">
+      <img src="../../img/info.svg" alt="Info" id="info"></a>
+    <h1>5G</h1>
 
+    <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    <!-- wyszukiwarka -->
+
+    <h2>/~ng/klasy_5/5g</h2>
+  </div>
+  <a href="../../pliki/5G/">
+  <button>Przeglądaj pliki</button></a>
 </body>
 
 </html>
